--- a/composer.json
+++ b/composer.json
@@ -15,16 +15,17 @@
             "email": "hugo@alliau.me"
         }
     ],
+    "minimum-stability": "dev",
     "require": {
         "php": ">=8.1",
-        "symfony/console": "^6.4|^7.0",
-        "symfony/filesystem": "^6.4|^7.0",
-        "symfony/http-client": "^6.4|^7.0",
-        "symfony/process": "^6.4|^7.0"
+        "symfony/console": "^6.4|^7.0|^8.0",
+        "symfony/filesystem": "^6.4|^7.0|^8.0",
+        "symfony/http-client": "^6.4|^7.0|^8.0",
+        "symfony/process": "^6.4|^7.0|^8.0"
     },
     "require-dev": {
-        "phpstan/phpstan": "^1.11",
-        "symplify/easy-coding-standard": "^12.1.2",
-        "symfony/framework-bundle": "^6.4|^7.0"
+        "phpstan/phpstan": "^2.1.21",
+        "symplify/easy-coding-standard": "12.5.22",
+        "symfony/framework-bundle": "^6.4|^7.0|^8.0"
     }
 }
